# polymath_kinematics

./: .cpplint.cfg  .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  package.xml  pyproject.toml  setup.cfg
derivations/: articulated_model.md  bicycle_model.md  differential_drive.md
include/polymath_kinematics/: articulated_model.hpp  articulated_projector.hpp  bicycle_model.hpp  bicycle_projector.hpp  differential_drive_model.hpp  differential_drive_projector.hpp  pose2d.hpp
polymath_kinematics/: __init__.py  kinematic_explorer_app.py
polymath_kinematics/explorer/: __init__.py  config.py  export.py  plotting.py  simulation.py  types.py
src/: articulated_model.cpp  articulated_projector.cpp  bicycle_model.cpp  bicycle_projector.cpp  differential_drive_model.cpp  differential_drive_projector.cpp  kinematics_pybind.cpp
test/: catch2_compat.hpp  test_articulated_model.cpp  test_articulated_projector.cpp  test_bicycle_model.cpp  test_bicycle_projector.cpp  test_differential_drive.cpp  test_differential_drive_projector.cpp  test_explorer.py  test_python_bindings.py
