[build-system]
requires = ["scikit-build-core>=0.10", "pybind11>=2.12"]
build-backend = "scikit_build_core.build"

[project]
name = "polymath_kinematics"
version = "0.2.0"
description = "Mixed C++/Python kinematics library for vehicle models"
license = { text = "Apache-2.0" }
maintainers = [
    { name = "Polymath Robotics", email = "dev@polymathrobotics.com" },
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.21.0",
]

[project.optional-dependencies]
explorer = [
    "streamlit>=1.20.0",
    "matplotlib>=3.5.0",
    "pandas>=1.4.0",
]
dev = [
    "pytest>=7.0.0",
    "polymath_kinematics[explorer]",
]

[project.scripts]
kinematic-explorer = "polymath_kinematics.kinematic_explorer_app:main"

[tool.scikit-build]
cmake.version = ">=3.15"
build.verbose = false
# C++ tests are built out-of-band via `cmake -DBUILD_TESTING=ON`, not as part of the wheel.
cmake.args = ["-DBUILD_TESTING=OFF"]
wheel.packages = ["polymath_kinematics"]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "streamlit>=1.20.0",
    "matplotlib>=3.5.0",
    "pandas>=1.4.0",
]
